[package]
name = "gronkh-tv-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
serde = {version =  "1.0.137", features = ["derive"]}
clap = { version = "3.2.8", features = ["derive", "suggestions", "color"] }
reqwest = {version = "0.11.11", features = ["json", "blocking"]}
fstrings = "0.2.4-rc2"
indicatif = "0.17.0-rc.11"
